remove category entity. Update routes, controllers, models and middleware, and api-docs
