# src/models/budgetItem.js
@@ -4,13 +4,8 @@ const idOptions = require("../utils/schemaIdOptions");
 const schema = new mongoose.Schema(
   {
     type: { type: String, enum: ["expense", "income"], required: true },
-    description: { type: String, required: true },
+    name: { type: String, required: true },
     amount: { type: Number, required: true },
-    category: {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: "Category",
-      required: true,
-    },
   },
   { ...idOptions, timestamps: true },
 );
